...
    state = state.copyWith(loading: true);

    _debounceTimer = Timer(const Duration(milliseconds: 1000), () {
      final parsed = int.tryParse(input);
      if (parsed == null || parsed < 5 || parsed > 25) {
        state = state.copyWith(
          errorMessage: "Please enter a number between 5 and 25",
          boxCount: 0,
          boxColors: [],
          clickedOrder: [],
          loading: false,
        );
        return;
...
